--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     
         <h1> Todays Chuckle </h1> 
-		<img src="images/toast.png" alt="Toast image"/> 
+		<img src="toast.png" alt="Toast image"/> 
         <h2>From The Milwaukee Sentinel</h2>
         <p>“Modern gadgets are wonderful. In the old days we were always
             having to pry the burned toast out of the toaster. Now the
